[metadata]
name = pyApp-aiomq
author = Tim Savage
author-email = tim@savage.company
description = Asyncio Message Queuing Extension for pyApp
url = https://github.com/pyapp-org
long-description = file: README.rst
long-description-content-type = text/x-rst
license = BSD
platforms = any
keywords = 
    application
    framework
    pyApp
    mq
    message-queue
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Application Frameworks
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >= 3.6
packages = pyapp_ext.aiomq
test_suite = tests
setup_requires =
    pytest-runner >=2.0,<3
    setuptools >=38.3
install_requires = 
    pyapp >=4.0.2
tests_require =
    mock
    pytest
    pytest-cov

[options.entry_points]
pyapp.extensions =
    pyapp.mq = pyapp_ext.mq:Extension

[options.extras_require]
aws = 
    pyapp-aiobotocore
dev = 
    black

[aliases]
test = pytest

[bdist_wheel]
universal = False

[tool:pytest]
addopts =
    --cov=pyapp_ext

[check]
metadata = True
restructuredtext = True
strict = True
